# openpql-app

./: .gitignore  CLAUDE.md  README.md  justfile  wrangler.toml
.github/workflows/: deploy.yml
daemon/: Cargo.toml
daemon/src/: dto.rs  main.rs  routes.rs
deploy/: README.md
ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/public/: _headers
ui/src/: App.vue  index.css  main.ts
ui/src/api/: daemon.ts  index.ts  rest.ts  wasm-pkg.d.ts  wasm.ts  ws.ts
ui/src/components/: BoardPicker.vue  CardPicker.vue  GameSelect.vue  HistoryPane.vue  PqlPlayground.vue  QueryEditor.vue  RangeGrid.vue  ResultsPane.vue
ui/src/pql/: build.ts  conflicts.ts  highlight.ts
ui/src/stores/: history.ts  run.ts
ui/src/workers/: README.md  pql.worker.ts  wasm-pkg.d.ts
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
